<resources>
    <string name="app_name">Save To Go</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="back_to_login">Back to Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>

    <string name="text_hello">Hello,</string>
    <string name="nama">Nama</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="my_account">My Account</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rekap">Rekap</string>
    <string name="saldo">Sisa Saldo</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="data_hari_ini">Data Hari Ini</string>
    <string name="tambah_data_keuangan">Tambah Data Keuangan</string>
    <string name="nama_transaksi">Nama Transaksi</string>
    <string name="saldo1">Saldo</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Cancel</string>
    <string name="greetings">Welcome Back ! Nice To See You Again</string>
</resources>